# GOPHR_ROS

./: CMakeLists.txt  README.md  package.xml
config/: gophr_control.yaml
launch/: autonomous_gophr.launch  get_waypoints.launch  hector_mapping_env.launch  mapping_gophr.launch
maps/: cart_map.pgm  cart_map.yaml  cobotics_lab_waypoint.yaml  mymap.pgm  mymap.yaml  newmap.yaml  tom.yaml  tom2.yaml  tom3.yaml  top_lidar_mounted.yaml
msg/: Float32Array.msg
nav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
nav/launch/: amcl.launch  move_base.launch  robot_pose_ekf.launch
rviz/config/: gophr_only_rviz.rviz  lidar_hector.rviz
rviz/launch/: robot_rviz_only.launch
scripts/: estop.py  odom_pub.py  send_waypoints.py  servo_lock.py  text_detection2.py  uart_pi_hero.py  waypoint_saver.py
stl/: RpLidar.stl
urdf/: gazebo.xacro  gophr_robot.xacro
