<?xml version="1.0"?>
<package format="2">
  <name>gophr_hardware</name>
  <version>0.1.0</version>
  <description>The gophr_hardware package</description>

  <maintainer email="tjccmobilerobotics@gmail.com">tjcc</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/gophr_hardware</url> -->

  <author email="chrisaortiz98@gmail.com">Christopher Ortiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>pytesseract</exec_depend>

</package>
